--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 1</span> </span>
                                     <h3><a href="#">โรงเรียนบ้านหนองขาหย่าง ตำบล สวนเมี่ยง อำเภอชาติตระการ พิษณุโลก</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 16-17 มกราคม 2559<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -272,7 +272,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 3</span> </span>
                                     <h3><a href="#">ศูนย์การเรียนรู้ชาวไทยภูเขา "แม่ฟ้าหลวง"บ้านทีบาทะ หมู่ 7 ต. แม่จัน อ.อุ้มผาง จ.ตาก</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 16-17 มกราคม 2560 <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -292,7 +292,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 4</span> </span>
                                     <h3><a href="#">ศูนย์การเรียน ตำรวจตระเวนชายแดนบ้านเลโพเด ตำบล แม่วะหลวง อำเภอท่าสองยาง จ.ตาก</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 20-22 ธันวาคม 2562<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -312,7 +312,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 5</span> </span>
                                     <h3><a href="#">ร.ร บ้านป่าเลา สาขาบ้านปงผาง สพป. จ.ลำพูน</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 8-10 มีนาคม 2564<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -332,7 +332,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 6</span> </span>
                                     <h3><a href="#">ศูนย์การเรียน ตำรวจตระเวนชายแดนบ้านคะเนจือทะ หมู่ ๙ ตำบลอุสุ อำเภอท่าสองยาง จังหวัดตาก </a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 23-26 ธันวาคม 2565<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -353,7 +353,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 7</span> </span>
                                     <h3><a href="#">โรงเรียนบ้านดอยคำ หมู่ที่  8  บ้านดอยคำ ตำบลหางดง อำเภอฮอด จังหวัดเชียงใหม่</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 9-11 ธันวาคม 2566<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -373,7 +373,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 8</span> </span>
                                     <h3><a href="#">ศูนย์การเรียนรู้ชุมชนชาวไทยภูเขา แม่ฟ้าหลวงห้วยขวาก ตั้งอยู่ที่ ต.บ่อเกลือเหนือ อ.บ่อเกลือ จ.น่าน</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 8-10 ธันวาคม 2567<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -393,7 +393,7 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 9</span> </span>
                                     <h3><a href="#">ศูนย์การเรียน ศูนย์การเรียนรู้ชุมชนชาวไทยภูเขา “แม่ฟ้าหลวง” บ้านห้วยมะพร้าว หมู่ที่๔ ตำบลสามหมื่น อำเภอแม่ระมาด จังหวัดตาก ๖๓๑๔๐ </a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <p class="dolor">วันที่ดำเนินการ 5-7 ธันวาคม 2568<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
