--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los พิษณุโลกs</li>
                                     </ul>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los น่าน</li>
                                     </ul>
                                 </div>
                             </div>
@@ -272,12 +272,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 3</span> </span>
                                     <h3><a href="#">ศูนย์การเรียนรู้ชาวไทยภูเขา "แม่ฟ้าหลวง"บ้านทีบาทะ หมู่ 7 ต. แม่จัน อ.อุ้มผาง จ.ตาก</a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 16-17 มกราคม 2560 <span></span></p>
+                                    <p class="dolor">วันที่ 16-17 มกราคม 2560 <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los ตาก</li>
                                     </ul>
                                 </div>
                             </div>
@@ -292,12 +292,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 4</span> </span>
                                     <h3><a href="#">ศูนย์การเรียน ตำรวจตระเวนชายแดนบ้านเลโพเด ตำบล แม่วะหลวง อำเภอท่าสองยาง จ.ตาก</a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 20-22 ธันวาคม 2562<span></span></p>
+                                    <p class="dolor">วันที่ 20-22 ธันวาคม 2562<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los ตาก</li>
                                     </ul>
                                 </div>
                             </div>
@@ -312,12 +312,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 5</span> </span>
                                     <h3><a href="#">ร.ร บ้านป่าเลา สาขาบ้านปงผาง สพป. จ.ลำพูน</a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 8-10 มีนาคม 2564<span></span></p>
+                                    <p class="dolor">วันที่ 8-10 มีนาคม 2564<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los ลำพูน</li>
                                     </ul>
                                 </div>
                             </div>
@@ -332,12 +332,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 6</span> </span>
                                     <h3><a href="#">ศูนย์การเรียน ตำรวจตระเวนชายแดนบ้านคะเนจือทะ หมู่ ๙ ตำบลอุสุ อำเภอท่าสองยาง จังหวัดตาก </a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 23-26 ธันวาคม 2565<span></span></p>
+                                    <p class="dolor">วันที่ 23-26 ธันวาคม 2565<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los ตาก</li>
                                     </ul>
                                 </div>
                             </div>
@@ -353,12 +353,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 7</span> </span>
                                     <h3><a href="#">โรงเรียนบ้านดอยคำ หมู่ที่  8  บ้านดอยคำ ตำบลหางดง อำเภอฮอด จังหวัดเชียงใหม่</a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 9-11 ธันวาคม 2566<span></span></p>
+                                    <p class="dolor">วันที่ 9-11 ธันวาคม 2566<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los เชียงใหม่</li>
                                     </ul>
                                 </div>
                             </div>
@@ -373,12 +373,12 @@
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 8</span> </span>
                                     <h3><a href="#">ศูนย์การเรียนรู้ชุมชนชาวไทยภูเขา แม่ฟ้าหลวงห้วยขวาก ตั้งอยู่ที่ ต.บ่อเกลือเหนือ อ.บ่อเกลือ จ.น่าน</a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 8-10 ธันวาคม 2567<span></span></p>
+                                    <p class="dolor">วันที่ 8-10 ธันวาคม 2567<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Los น่าน</li>
                                     </ul>
                                 </div>
                             </div>
@@ -392,8 +392,8 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 9</span> </span>
-                                    <h3><a href="#">ศูนย์การเรียน ศูนย์การเรียนรู้ชุมชนชาวไทยภูเขา “แม่ฟ้าหลวง” บ้านห้วยมะพร้าว หมู่ที่๔ ตำบลสามหมื่น อำเภอแม่ระมาด จังหวัดตาก ๖๓๑๔๐ </a></h3>
-                                    <p class="dolor">วันที่ดำเนินการ 5-7 ธันวาคม 2568<span></span></p>
+                                    <h3><a href="#">ศูนย์การเรียน ศูนย์การเรียนรู้ชุมชนชาวไทยภูเขา “แม่ฟ้าหลวง” บ้านห้วยมะพร้าว หมู่ที่๔ ต.สามหมื่น อำเภอแม่ระมาด จ.ตาก ๖๓๑๔๐ </a></h3>
+                                    <p class="dolor">วันที่ 5-7 ธันวาคม 2568<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -415,7 +415,7 @@
                     <div class="col-xl-12">
                         <div class="video-caption text-center">
                             <div class="video-icon">
-                                <a class="popup-video" href="https://www.youtube.com/watch?v=1aP-TXUpNoU" tabindex="0"><i class="fas fa-play"></i></a>
+                                <a class="popup-video" href="" tabindex="0"><i class="fas fa-play"></i></a>
                             </div>
                             <p class="pera1">การเดินทางของเราเริ่มต้นจากกลุ่มเล็ก ๆ ที่อยากจะทำอะไรบางอย่างเพื่อสังคม
 ทุก ๆ ปี เราจะรวมตัวกันเดินทางขึ้นดอย สู่โรงเรียนเล็ก ๆ ในถิ่นทุรกันดาร เพื่อช่วยกันทาสี เติมความสดใสให้ห้องเรียน
@@ -448,7 +448,7 @@
                                 <h2>เป้าหมายหลัก  <br></h2>
                             </div>
                             <div class="support-caption">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+                                <p>“กลุ่มทาสีเพื่อน้องมีเป้าหมายในการพัฒนาสภาพแวดล้อมโรงเรียนบนดอย ให้เด็ก ๆ ได้เรียนรู้อย่างมีความสุข พร้อมปลูกฝังจิตอาสาและการแบ่งปันในสังคม”</p>
                                 <div class="select-suport-items">
                                     <label class="single-items">สร้างสภาพแวดล้อมการเรียนรู้ที่สดใสและปลอดภัยให้กับโรงเรียนในถิ่นทุรกันดาร
                                         <input type="checkbox" checked="checked active">
