--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb กิจกรรมทาสีเพื่อน้องปีที่ 2</span> </span>
+                                    <span><i class="fas fa-star"></i><span>กิจกรรมทาสีเพื่อน้องปีที่ 2</span> </span>
                                     <h3><a href="#">ศูนย์การเรียนชุมชนชาวไทยภูเขา"แม่ฟ้าหลวง"บ้านปู่ดู่ ต.ขุนน่าน อ.เฉลิมพระเกียรติ จ.น่าน</a></h3>
                                     <p class="dolor">วันที่ดำเนินการ 16-17 มกราคม 2560<span></span></p>
                                 </div>
